2007-05-11  Akim Demaille  <demaille@gostai.com>

	Make ast generation more robust, and more alike tc's
	* dev/ast_params.py (deep_clear): New.
	* dev/ast-clone-visitor-gen, dev/ast-graph-gen, dev/ast-nodes-gen,
	* dev/ast-readme-gen, dev/ast-visitor-gen, dev/ast.py, dev/tools.py:
	Use it.
	Update with current version in tc.
	Make it (slightly) more generic.
	(node.final): Rename as...
	(node.concrete): this.

2007-05-11  Akim Demaille  <demaille@gostai.com>

	ast.yml fixes
	* dev/ast_params.py: New.
	Extend it.
	Was extracted from...
	* dev/ast-nodes-gen: here.
	Use it.
	* dev/ast.py: Ditto.
	* src/ast/Makefile.am (ast_gen_deps): Complete.

2007-05-11  Akim Demaille  <demaille@gostai.com>

	Fix typoes
	* src/ast/ast.yml: Don't use the "or" and "and" keywords.
	Remove meaningless comments.

2007-05-11  Akim Demaille  <demaille@gostai.com>

	Various updates and fixes
	* src/kernel.mk: Grow stronger.
	* src/Makefile.am: Use it.
	* configure.ac: .
	* dev/ast-clone-visitor-gen, dev/ast-fwd-gen, dev/ast-nodes-gen,
	* dev/ast-visitor-gen, dev/ast.py, src/ast/ast.yml: Adjust to the
	fact that most of our tools are in libport, not in misc/ or symbol/.

2007-05-11  Akim Demaille  <demaille@gostai.com>

	Update
	* bootstrap: Strengthen.
	* src/Makefile.am, configure.ac: Go into src/ast.
	Most of the following tools are imported from kernel2, but
	have been updated.
	* dev/ast-clone-visitor-gen: New.
	* dev/ast-fwd-gen: New.
	* dev/ast-graph-gen: New.
	* dev/ast-nodes-gen: New.
	* dev/ast-nodes-mk-gen: New.
	* dev/ast-readme-gen: New.
	* dev/ast-visitor-gen: New.
	* dev/ast.py: New.
	* dev/count-fixme-lines: New.
	* dev/cut-bison-actions: New.
	* dev/diff-r: New.
	* dev/tools.py: New.

	* src/ast/Makefile.am: New.
	* src/ast/all.hh: New.
	* src/ast/ast.yml: New.
	* src/ast/default-visitor.hh: New.
	* src/ast/default-visitor.hxx: New.
	* src/ast/loc.hh: New.
	* src/ast/visitor.hxx: New.
	* src/ast: New.
	* src/kernel.mk: New.

2007-05-03  Akim Demaille  <demaille@gostai.com>
